[project]
name = "herbie-data"
description = "Download numerical weather prediction GRIB2 model data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Brian K. Blaylock", email = "blaylockbk@gmail.com" }]
maintainers = [{ name = "Brian K. Blaylock", email = "blaylockbk@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = [
    "weather",
    "meteorology",
    "forecast",
    "atmosphere",
    "GRIB2",
    "xarray",
    "HRRR",
]
dependencies = [
    "cfgrib>=0.9.15",
    "numpy>=1.24",
    "pandas>=2.1",
    "pyproj>=3.7.0",
    "requests>=2.23.3",
    "toml>=0.10.2",  # TODO: Drop in favor of tomllib when Python >=3.11 is required.
    "xarray>=2025.1.1",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/blaylockbk/Herbie"
"Documentation" = "https://herbie.readthedocs.io/"
"Repository" = "https://github.com/blaylockbk/Herbie"
"Changelog" = "https://github.com/blaylockbk/Herbie/releases"
"Bug Tracker" = "https://github.com/blaylockbk/Herbie/issues"

[project.optional-dependencies]
extras = ["cartopy", "matplotlib", "metpy", "scikit-learn"]
test = ["pytest", "pytest-cov", "ruff"]
pygrib = ["pygrib"]
docs = [
    "autodocsumm",
    "ipython",
    "linkify-it-py",
    "myst-parser",
    "nbconvert",
    "nbsphinx",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
    "recommonmark",
    "sphinx",
    "sphinx-autosummary-accessors",
    "sphinx-design",
    "sphinx-markdown-tables",
    "sphinxcontrib-mermaid",
]

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["herbie"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "herbie/_version.py"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    "D", # pydocstyle

]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-rsfEX -p pytester --strict-markers --verbosity=3 --cov=herbie"
log_level = "DEBUG"
testpaths = ["tests"]
xfail_strict = true
markers = []
