[project]
name = "herbie-data"
description = "Download numerical weather prediction GRIB2 model data."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Brian K. Blaylock", email = "blaylockbk@gmail.com" }]
maintainers = [{ name = "Brian K. Blaylock", email = "blaylockbk@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = [
    "weather",
    "meteorology",
    "forecast",
    "atmosphere",
    "GRIB2",
    "xarray",
    "HRRR",
]
dependencies = [
    "cfgrib>=0.9.15",
    "eccodes>=2.45.0",
    "eccodeslib>=2.44.1.8; sys_platform != 'win32'",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pyproj>=3.7.0",
    "requests>=2.23.3",
    "xarray>=2025.1.1",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/blaylockbk/Herbie"
"Documentation" = "https://herbie.readthedocs.io/"
"Repository" = "https://github.com/blaylockbk/Herbie"
"Changelog" = "https://github.com/blaylockbk/Herbie/releases"
"Bug Tracker" = "https://github.com/blaylockbk/Herbie/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "scipy>=1.17.0",     # only needed for test writing netcdf file
    "cartopy>=0.25.0",
    "metpy>=1.7.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "rich>=14.3.2",
    "ty>=0.0.16",
]
docs = [
    "autodocsumm>=0.2.14",
    "ipython>=8.35.0",
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.1",
    "nbconvert>=7.16.6",
    "nbsphinx>=0.9.7",
    "pydata-sphinx-theme>=0.16.1",
    "recommonmark>=0.7.1",
    "sphinx>=8.1.3",
    "sphinx-autosummary-accessors>=2025.3.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-markdown-tables>=0.0.17",
    "sphinxcontrib-mermaid>=1.0.0",
]


[project.optional-dependencies]
plot = ["cartopy>=0.25.0", "matplotlib>=3.10.0", "metpy>=1.7.1"]
metpy = ["metpy>=1.7.1"]
scikit-learn = ["scikit-learn>=1.8.0"]

pygrib = ["pygrib>=2.1.8"]

extras = [
    "herbie-data[plot,metpy,scikit-learn]", # Didn't include pygrib on purpose
]
experimental = [
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "rich[jupyter]>=14.3.2",
]

[tool.hatch]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/herbie/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/notebooks",
    "/.vscode",
    "/sample_data",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/herbie"]


[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    "D",  # pydocstyle

]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-rsfEX -p pytester --strict-markers --verbosity=3 --cov=src/herbie"
log_level = "DEBUG"
testpaths = ["tests"]
xfail_strict = true
markers = []

[project.scripts]
herbie = "herbie.cli:main"
