[metadata]
name = herbie-data
description = Download numerical weather prediction GRIB2 model data.
author = Brian K. Blaylock
author_email = blaylockbk@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
url = https://github.com/blaylockbk/Herbie
project_urls =
    Source Code = https://github.com/blaylockbk/Herbie
    Documentation = https://blaylockbk.github.io/Herbie/_build/html/
    Release Notes = https://github.com/blaylockbk/Herbie/releases
    Bug Tracker = https://github.com/blaylockbk/Herbie/issues
keywords =
    meteorology
    weather
    forecast
    atmosphere
    GRIB2
    xarray
    HRRR
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.8
zip_safe = False
install_requires =
    numpy
    pandas
    xarray
    cfgrib
    metpy
    cartopy
    toml
    pygrib

## Something wrong with the below??

#[options.extra_require]
#tests =
#    pytest
#doc =
#    sphinx
#    nbsphinx
#    pydata-sphinx-theme
#    sphinx-design
#    autodocsumm
#    myst-parser
#
#[build_sphinx]
#source-dir = docs
#build-dir = docs/_build
#
