[project]
name = "herbie-plugin-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@here.com" },
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."herbie.plugins"]
my_custom_models = "herbie_plugin_demo"
